# grpc_chunk_stream_demo

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  Makefile  README.md  render_templates.py  requirements.txt
benchmark/results/: analyze_results.ipynb
benchmark/results/examples/ubuntu_bare_metal/: compressionlevel_1_delay_1ms.csv  compressionlevel_1_rate_1000mbit_delay_1ms.csv  (+7 more)
benchmark/runner/: run_constrained.py  run_measurements.py  run_sync.py
benchmark/src/: CMakeLists.txt  clientlib.hpp  serverlib.hpp  sync_client.cpp  sync_server.cpp  types_lookup.hpp.in
benchmark/src/client/: .gitignore  CMakeLists.txt  clientlib.hpp  measure_memcpy.cpp  measurelib.hpp  sync_client.cpp.in  sync_client_fixed_chunksize.cpp.in
benchmark/src/common/: types_lookup.hpp.in
benchmark/src/protos/: send_array.proto.in
benchmark/src/server/: serverlib.hpp  sync_server.cpp  sync_server.cpp.in
cpp/: CMakeLists.txt  Makefile  demo_client.cc  demo_server.cc
cpp_benchmark/: CMakeLists.txt  Makefile  README.md  conanfile.txt  requirements.txt
cpp_benchmark/generated_src/: CMakeLists.txt
cpp_benchmark/src/: CMakeLists.txt  serverlib.hpp  sync_client.cpp  sync_server.cpp  timer.cpp  types_lookup.hpp
cpp_benchmark/src/protos/: render_proto_template.py  send_array.proto.in
demo/: Makefile
demo/src/client/: CMakeLists.txt
demo/src/server/: CMakeLists.txt
protos/: chunkdemo.proto
python/: chunkdemo_pb2.py  chunkdemo_pb2_grpc.py  client.py  pbdemo.c  setup.py
python/demo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
